# rs-id-gen

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
